k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hello-service

spec:
  # 要求 Kubernetes 始终维持三个 Pod
  replicas: 3

  # 保留最近 5 个版本对应的 ReplicaSet
  revisionHistoryLimit: 5
  # 120 秒内发布没有进展，标记为发布失败
  progressDeadlineSeconds: 120
  # Pod Ready 后持续稳定 10 秒，才算真正可用
  minReadySeconds: 10

  selector:
    matchLabels:
      app: hello-service

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    metadata:
      labels:
        app: hello-service

    spec:
      containers:
        - name: hello-service

          # 第一次 GitHub Actions 执行后，会自动替换这一行
          image: ghcr.io/whitefly/k8s_practice:47e60290e1fc

          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi
