k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hello-service

spec:
  selector:
    app: hello-service
  # svc的80端口---> pod的8080
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
