k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-service
  annotations:
    # 使用 Traefik 的 HTTP 入口，对应端口 80
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik

  rules:
    - host: hello.127.0.0.1.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: hello-service
                port:
                  number: 80
